<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity">

    <Button
        android:id="@+id/bt_next_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calender"
        app:layout_constraintBottom_toTopOf="@+id/bt_next_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_next_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_next_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_all" />

    <Button
        android:id="@+id/bt_next_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_next_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_next_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_sensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/bt_next_all"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_next_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bt_next_record"
        app:layout_constraintStart_toStartOf="@+id/bt_next_record"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_record" />

    <TextView
        android:id="@+id/tv_next_calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bt_next_calender"
        app:layout_constraintStart_toStartOf="@+id/bt_next_calender"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_calender" />

    <TextView
        android:id="@+id/tv_next_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bt_next_body"
        app:layout_constraintStart_toStartOf="@+id/bt_next_body"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_body" />

    <TextView
        android:id="@+id/tv_next_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bt_next_contact"
        app:layout_constraintStart_toStartOf="@+id/bt_next_contact"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>